<?xml version="1.0"?>
<package>
  <name>calibration_capture</name>
  <version>0.0.0</version>
  <description>The calibration_capture package</description>

  <maintainer email="allison.thackston@nasa.gov">Allison Thackston</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>calibration_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>calibration_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_cb_detector</run_depend>
  <run_depend>interval_intersection</run_depend>
  <run_depend>joint_states_settler</run_depend>
  <run_depend>laser_cb_detector</run_depend>
  <run_depend>monocam_settler</run_depend>
  <!-- <run_depend>urdf_python</run_depend>  for parsing URDF (currently a modified version is held internally) -->

  <export>
  </export>
</package>