<?xml version="1.0"?>
<package>
  <name>calibration_launch</name>
  <version>0.0.0</version>
  <description>Launch files for data collection.</description>

  <author email="todo@todo.com">Michael Ferguson</author>
  <maintainer email="allison.thackston@nasa.gov">Allison Thackston</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>image_cb_detector</run_depend>
  <run_depend>laser_cb_detector</run_depend>
  <run_depend>image_view</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>calibration_capture</run_depend>
  <run_depend>monocam_settler</run_depend>
  <run_depend>joint_states_settler</run_depend>
  <run_depend>interval_intersection</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>calibration_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>