<?xml version="1.0"?>
<package>
  <name>extrinsic_calibrator</name>
  <version>0.0.0</version>
  <description>The extrinsic_calibrator package</description>

  <maintainer email="allison.thackston@nasa.gov">Allison Thackston</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>dynamic_transform_publisher</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>dynamic_transform_publisher</run_depend>

  <export>
  </export>
</package>