<?xml version="1.0"?>
<package>
  <name>image_cb_detector</name>
  <version>0.0.0</version>
  <description>The image_cb_detector package</description>

  <maintainer email="allison.thackston@nasa.gov">Allison Thackston</maintainer>

  <license>NASA-1.3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>tinyxml</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>settlerlib</build_depend>
  <build_depend>calibration_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>tinyxml</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>settlerlib</run_depend>
  <run_depend>calibration_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <image_cb_detector plugin="${prefix}/calibration_targets.xml" />
  </export> 
</package>