<?xml version="1.0"?>
<package>
  <name>interval_intersection</name>
  <version>0.0.0</version>
  <description>Compute the intersection of many interval msgs</description>

  <maintainer email="allison.thackston@nasa.gov">Allison Thackston</maintainer>
  <author email="todo@todo.com">Romain Thibaux</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>calibration_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>calibration_msgs</run_depend>

  <export>
  </export>
</package>