<?xml version="1.0"?>
<package>
  <name>joint_states_settler</name>
  <version>0.0.0</version>
  <description>Detect when a set of joints has stopped moving</description>

  <maintainer email="allison.thackston@nasa.gov">Allison Thackston</maintainer>
  <author email="todo@todo.com">Vijay Pradeep</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>settlerlib</build_depend>
  <build_depend>calibration_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>settlerlib</run_depend>
  <run_depend>calibration_msgs</run_depend>

  <export>
  </export>
</package>