<?xml version="1.0"?>
<package>
  <name>laser_cb_detector</name>
  <version>0.0.0</version>
  <description>Extracts checkerboard corners from a dense laser snapshot</description>

  <author email="todo@todo.com">Vijay Pradeep</author>
  <maintainer email="allison.thackston@nasa.gov">Allison Thackston</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>calibration_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>calibration_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>
  </export> 
</package>